--- a/Data Exploration.ipynb
+++ b/Data Exploration.ipynb
@@ -1,6 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stock Price Data Exploration "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We were deciding between two different methods of grabbing the stock data. \n",
+    "1. via API calls from (where??)\n",
+    "2. via direct CSV download from NASDAQ \n",
+    "\n",
+    "We decided on the second because it would be simpler and fulfill our purposes for the project.\n",
+    "\n",
+    "For initial exploration of data we thought about some of the aspects of the data that we would be interested in seeing. The data gives us a couple of metrics (<--what word do i use here??) to work with:\n",
+    "\n",
+    "* Close - The price of the stock at the end of the trading day.\n",
+    "* Open - The price of the stock at the beginning of the trading day.\n",
+    "* Volume - The number of shares that were traded that day\n",
+    "* High - The peak price of the stock for that day\n",
+    "* Low - The lowest price of the stock for that day\n",
+    "\n",
+    "What sort of relationships between these metrics did we want to see?\n",
+    "\n",
+    "1. We can look at how a given metric can change over different windows/intervals of time. For example, how the closing price changed over the course of the last month versus the change over the last year.\n",
+    "\n",
+    "2. Which metrics are more meaningful?\n",
+    "    * We're not really sure yet, so we should probably have a function that takes in the metric as a parameter and graphs accordingly.\n",
+    "\n",
+    "We created functions that would allow us to generate these relationships with greater ease.\n",
+    "\n",
+    "* filter_data_by_date\n",
+    "  * Allows us to choose the time interval we want to look at and filters the data to match this interval\n",
+    "  \n",
+    "* plot_stock_data\n",
+    "  * Function that plots the metric of our choosing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
@@ -167,6 +208,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
