Exploring It Out
Started detailing out exploration procedure

--- a/Data Exploration.ipynb
+++ b/Data Exploration.ipynb
@@ -11,8 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Planning it out\n",
     "We were deciding between two different methods of grabbing the stock data. \n",
-    "1. via API calls from (where??)\n",
+    "1. via API calls from [Quandl](https://www.quandl.com/docs/api) (An API that contains stock information LUL)\n",
     "2. via direct CSV download from NASDAQ \n",
     "\n",
     "We decided on the second because it would be simpler and fulfill our purposes for the project.\n",
@@ -30,15 +31,38 @@
     "1. We can look at how a given metric can change over different windows/intervals of time. For example, how the closing price changed over the course of the last month versus the change over the last year.\n",
     "\n",
     "2. Which metrics are more meaningful?\n",
-    "    * We're not really sure yet, so we should probably have a function that takes in the metric as a parameter and graphs accordingly.\n",
     "\n",
+    "       We're not really sure yet, so we should probably have a function that takes in the metric as a parameter and graphs accordingly.\n",
+    "\n",
+    "3. We may want to see how two or more metrics may or may not correlate with one another\n",
+    "    \n",
+    "        Ex: Does volume of trade have a relationship with the closing price of the day?\n",
+    "        \n",
+    "        We may want to be able to plot more than one metric on a single graph to be able to look at these relationships.\n",
+    "    \n",
+    "    \n",
     "We created functions that would allow us to generate these relationships with greater ease.\n",
     "\n",
     "* filter_data_by_date\n",
     "  * Allows us to choose the time interval we want to look at and filters the data to match this interval\n",
     "  \n",
     "* plot_stock_data\n",
-    "  * Function that plots the metric of our choosing."
+    "  * Function that lets us be flexible and plots the metric of our choosing.\n",
+    "  * Currently only plots one graph at a time\n",
+    "  * Allowed the option to graph the linear regression line on top of the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploring it out\n",
+    "\n",
+    "After importing our CSV and arbitrarily choosing **closing price** to be our metric for exploration --\n",
+    "\n",
+    "1. We started graphing out the data points over different intervals of time.\n",
+    "\n",
+    "2. We ran some simple linear regressions for each time interval and subsequently graphed those as well."
    ]
   },
   {
