data extraction function ready

--- a/Data Exploration.ipynb
+++ b/Data Exploration.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -342,6 +342,174 @@
     "    print result['abstract']\n",
     "    print result['published_date']\n",
     "# pprint(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_news_by_time(sections, time_limit, api_key):\n",
+    "    df = pd.DataFrame(columns=('title', 'abstract', 'publish_date'))\n",
+    "    \n",
+    "    # inital api call\n",
+    "    url = 'http://api.nytimes.com/svc/news/v3/content/all/{}/{}.json?api-key={}&offset={}'.format(sections, time_limit, api_key, 0)\n",
+    "    response = urllib2.urlopen(url).read()\n",
+    "    test = json.loads(response)\n",
+    "    \n",
+    "    # get num results\n",
+    "    num_results = test['num_results']\n",
+    "    \n",
+    "    # calc additional calls needed\n",
+    "    num_iter = (num_results/20)\n",
+    "    \n",
+    "    \n",
+    "    for index, result in enumerate(test['results']):\n",
+    "        df.loc[index + offset*20] = [result['title'], result['abstract'], result['published_date']]\n",
+    "    \n",
+    "    \n",
+    "    for x in range(num_iter):\n",
+    "        url = 'http://api.nytimes.com/svc/news/v3/content/all/{}/{}.json?api-key={}&offset={}'.format(sections, time_limit, api_key, (x+1)*20)\n",
+    "        response = urllib2.urlopen(url).read()\n",
+    "        test = json.loads(response)\n",
+    "\n",
+    "        for index, result in enumerate(test['results']):\n",
+    "            df.loc[index + (x+1)*20] = [result['title'], result['abstract'], result['published_date']]\n",
+    "\n",
+    "    return df\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "hehe = get_news_by_time('business;technology', 100, 'd5a1e6fab7f04a10b2d3844b1b32b1ba')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52\n"
+     ]
+    }
+   ],
+   "source": [
+    "print len(hehe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>abstract</th>\n",
+       "      <th>publish_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>Oracle on Track to Acquire NetSuite, a Cloud S...</td>\n",
+       "      <td>The company said that holders of 53 percent of...</td>\n",
+       "      <td>2016-11-05T20:00:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td>Volkswagen Emissions Scandal Inquiry Widens to...</td>\n",
+       "      <td>Prosecutors are investigating whether Hans Die...</td>\n",
+       "      <td>2016-11-05T20:00:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>A Lawyer With a Taste for Soy Sauce and a High...</td>\n",
+       "      <td>Although Jonathan Blum had spent his legal car...</td>\n",
+       "      <td>2016-11-04T20:00:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>403</th>\n",
+       "      <td>How LinkedIn Drove a Wedge Between Microsoft a...</td>\n",
+       "      <td>Once so close they flirted with a merger, the ...</td>\n",
+       "      <td>2016-11-04T20:00:00-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>Farhad’s and Mike’s Week in Tech: Gaming as Pr...</td>\n",
+       "      <td>Mike is a medieval witch hunter, as Farhad ret...</td>\n",
+       "      <td>2016-11-04T20:00:00-04:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 title  \\\n",
+       "400  Oracle on Track to Acquire NetSuite, a Cloud S...   \n",
+       "401  Volkswagen Emissions Scandal Inquiry Widens to...   \n",
+       "402  A Lawyer With a Taste for Soy Sauce and a High...   \n",
+       "403  How LinkedIn Drove a Wedge Between Microsoft a...   \n",
+       "404  Farhad’s and Mike’s Week in Tech: Gaming as Pr...   \n",
+       "\n",
+       "                                              abstract  \\\n",
+       "400  The company said that holders of 53 percent of...   \n",
+       "401  Prosecutors are investigating whether Hans Die...   \n",
+       "402  Although Jonathan Blum had spent his legal car...   \n",
+       "403  Once so close they flirted with a merger, the ...   \n",
+       "404  Mike is a medieval witch hunter, as Farhad ret...   \n",
+       "\n",
+       "                  publish_date  \n",
+       "400  2016-11-05T20:00:00-04:00  \n",
+       "401  2016-11-05T20:00:00-04:00  \n",
+       "402  2016-11-04T20:00:00-04:00  \n",
+       "403  2016-11-04T20:00:00-04:00  \n",
+       "404  2016-11-04T20:00:00-04:00  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hehe.head(n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "hehe.reset_index(drop=True)\n",
+    "hehe.to_csv('foo.csv', sep=',', encoding='utf-8')"
    ]
   },
   {
