working extraction function: 1 year

--- a/Data Exploration.ipynb
+++ b/Data Exploration.ipynb
@@ -277,76 +277,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import urllib2\n",
-    "import json\n",
-    "from pprint import pprint"
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "sections = 'business;technology'\n",
-    "time_limit = 72 # number of hours from today\n",
-    "api_key = 'd5a1e6fab7f04a10b2d3844b1b32b1ba'\n",
-    "offset = 20\n",
-    "\n",
-    "url = 'http://api.nytimes.com/svc/news/v3/content/all/{}/{}.json?api-key={}&offset={}'.format(sections, time_limit, api_key, offset)\n",
-    "\n",
-    "response = urllib2.urlopen(url).read()\n",
-    "test = json.loads(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23\n",
-      "0\n",
-      "Last Economic Snapshot Before the Election Shows Healthy Job Growth\n",
-      "While the presidential campaigns have been preoccupied with issues beyond the economy, the report refocuses attention on the crucial issue of jobs.\n",
-      "2016-11-03T20:00:00-04:00\n",
-      "1\n",
-      "Dick Clark Productions to Be Sold to Chinese Company for $1 Billion\n",
-      "The sale to Dalian Wanda, which has been on a buying spree, would include broadcasting rights to the Golden Globes and other TV spectacles.\n",
-      "2016-11-03T20:00:00-04:00\n",
-      "2\n",
-      "‘We Almost Have Riots’: Tensions Flare in Silicon Valley Over Growth\n",
-      "As the region has become more congested and expensive, there are growing demands to rein in the physical space that many technologists call home.\n",
-      "2016-11-03T20:00:00-04:00\n"
-     ]
-    }
-   ],
-   "source": [
-    "print test['num_results']\n",
-    "for i, result in enumerate(test['results']):\n",
-    "    print i\n",
-    "    print result['title']\n",
-    "    print result['abstract']\n",
-    "    print result['published_date']\n",
-    "# pprint(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -385,131 +328,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "hehe = get_news_by_time('business;technology', 100, 'd5a1e6fab7f04a10b2d3844b1b32b1ba')"
+    "one_year_data = get_news_by_time('business;technology', 365*24, 'd5a1e6fab7f04a10b2d3844b1b32b1ba')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "52\n"
-     ]
-    }
-   ],
-   "source": [
-    "print len(hehe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>abstract</th>\n",
-       "      <th>publish_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>400</th>\n",
-       "      <td>Oracle on Track to Acquire NetSuite, a Cloud S...</td>\n",
-       "      <td>The company said that holders of 53 percent of...</td>\n",
-       "      <td>2016-11-05T20:00:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>401</th>\n",
-       "      <td>Volkswagen Emissions Scandal Inquiry Widens to...</td>\n",
-       "      <td>Prosecutors are investigating whether Hans Die...</td>\n",
-       "      <td>2016-11-05T20:00:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>402</th>\n",
-       "      <td>A Lawyer With a Taste for Soy Sauce and a High...</td>\n",
-       "      <td>Although Jonathan Blum had spent his legal car...</td>\n",
-       "      <td>2016-11-04T20:00:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>403</th>\n",
-       "      <td>How LinkedIn Drove a Wedge Between Microsoft a...</td>\n",
-       "      <td>Once so close they flirted with a merger, the ...</td>\n",
-       "      <td>2016-11-04T20:00:00-04:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>404</th>\n",
-       "      <td>Farhad’s and Mike’s Week in Tech: Gaming as Pr...</td>\n",
-       "      <td>Mike is a medieval witch hunter, as Farhad ret...</td>\n",
-       "      <td>2016-11-04T20:00:00-04:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 title  \\\n",
-       "400  Oracle on Track to Acquire NetSuite, a Cloud S...   \n",
-       "401  Volkswagen Emissions Scandal Inquiry Widens to...   \n",
-       "402  A Lawyer With a Taste for Soy Sauce and a High...   \n",
-       "403  How LinkedIn Drove a Wedge Between Microsoft a...   \n",
-       "404  Farhad’s and Mike’s Week in Tech: Gaming as Pr...   \n",
-       "\n",
-       "                                              abstract  \\\n",
-       "400  The company said that holders of 53 percent of...   \n",
-       "401  Prosecutors are investigating whether Hans Die...   \n",
-       "402  Although Jonathan Blum had spent his legal car...   \n",
-       "403  Once so close they flirted with a merger, the ...   \n",
-       "404  Mike is a medieval witch hunter, as Farhad ret...   \n",
-       "\n",
-       "                  publish_date  \n",
-       "400  2016-11-05T20:00:00-04:00  \n",
-       "401  2016-11-05T20:00:00-04:00  \n",
-       "402  2016-11-04T20:00:00-04:00  \n",
-       "403  2016-11-04T20:00:00-04:00  \n",
-       "404  2016-11-04T20:00:00-04:00  "
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hehe.head(n=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "hehe.reset_index(drop=True)\n",
-    "hehe.to_csv('foo.csv', sep=',', encoding='utf-8')"
+    "one_year_data = one_year_data.reset_index(drop=True)\n",
+    "one_year_data.head(n=5)\n",
+    "one_year_data.to_csv('AAPL_1_year_from_11-6-2016.csv', sep=',', encoding = 'cp1252')"
    ]
   },
   {
