organizing final notebook

--- a/Data-Exploration-AJ.ipynb
+++ b/Data-Exploration-AJ.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 268,
    "metadata": {
     "collapsed": false
    },
@@ -90,32 +90,15 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     C:\\Users\\Admin\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     C:\\Users\\Admin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn import linear_model\n",
-    "import nltk\n",
-    "nltk.download(\"stopwords\")\n",
-    "from nltk.corpus import stopwords\n",
-    "from datetime import timedelta\n",
-    "from sklearn.linear_model import LogisticRegression as LogReg\n",
-    "from sklearn.linear_model import LogisticRegressionCV as LogRegCV\n",
-    "import math\n",
-    "import string \n",
-    "from six.moves.html_parser import HTMLParser\n",
-    "import urllib2\n",
-    "import json\n",
-    "import time\n",
-    "from functools import wraps\n",
-    "from copy import deepcopy\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "#%matplotlib inline"
+    "f"
    ]
   },
   {
@@ -640,7 +623,7 @@
     "    words_lst = []\n",
     "    for i in range(num_articles):\n",
     "        words_lst += df.iloc[i][option].split()\n",
-    "        \n",
+    "    \n",
     "    unique_words = list(set(words_lst))\n",
     "    print '\\nNumber of unique words across all text (including stopwords):', len(unique_words)\n",
     "    \n",
@@ -738,6 +721,94 @@
    "metadata": {},
    "source": [
     "# Playing with the CountVectorizer module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "424                                           rw apple food\n",
+       "802                                                ipod day\n",
+       "1919                                                  apple\n",
+       "2203                                                       \n",
+       "2434                                 fund rival slate chain\n",
+       "5354                                     simple add-on ipod\n",
+       "7260                                           apple report\n",
+       "7286                                           iphone apple\n",
+       "7488                                            apple probe\n",
+       "7545                                      apple filing tell\n",
+       "7816                                            apple panel\n",
+       "8985                                     catch chapter ipod\n",
+       "9098                        ipod child-friendly aaa battery\n",
+       "9123          well-dressed ipod leather jacket color choice\n",
+       "10293                             new mobile phone ambition\n",
+       "10364                             cingular-apple deal phone\n",
+       "10411                                       apple cellphone\n",
+       "10518                                                 apple\n",
+       "10520                               cisco apple iphone name\n",
+       "10539                                           apple phone\n",
+       "10557                          cisco ownership iphone apple\n",
+       "10743                                        phone consumer\n",
+       "10747                                       ultimate iphone\n",
+       "11207                                         iphone beware\n",
+       "12240                                  apple profit quarter\n",
+       "12704                          way accessorize ipod buy car\n",
+       "12732                        prosecutor apple case law firm\n",
+       "16472                                               dispute\n",
+       "16694                       chief end music copy protection\n",
+       "16757                                     europe cool music\n",
+       "                                ...                        \n",
+       "628299                                         apple retail\n",
+       "629301                                week new floppy drive\n",
+       "629378                                  apple danger growth\n",
+       "629896                 tekserve precursor apple store close\n",
+       "630332                                    apple steady boat\n",
+       "631405                            available beta head start\n",
+       "632666                                    apple jab spotify\n",
+       "632898                   spotify apple music goth vs stoner\n",
+       "634459                                            drop spot\n",
+       "634470                                big apple circus tent\n",
+       "634653                             apple disappointing much\n",
+       "635027                                             new york\n",
+       "635103    frank lloyd wright country architecture apple pie\n",
+       "636009             apple samsung supreme court sony virtual\n",
+       "637864           eddie applegate sweetheart patty duke show\n",
+       "638201                                   apple tesla report\n",
+       "638369                      drake life platform apple music\n",
+       "638742         morning new antitrust era relief vw optimism\n",
+       "638808               apple big holiday bounce rival samsung\n",
+       "638826                               new macbook pro touchy\n",
+       "639238    russia hillary clinton macbook pro friday brie...\n",
+       "639333                       week microsoft apple halloween\n",
+       "639756                            william help jenner apple\n",
+       "640637                            beware iphone retail apps\n",
+       "641059                              dublin tax charge apple\n",
+       "641979                  new macbook pro fast light everyone\n",
+       "642775                                        eve bit apple\n",
+       "642976                                 apple american class\n",
+       "642989    american apple pie rural disproportionate slic...\n",
+       "643086                     daily report apple manufacturing\n",
+       "Name: headline, dtype: object"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "play_with = deepcopy(filtered_df['headline'])\n",
+    "\n",
+    "def extract_noun_adj(x):\n",
+    "    return ' '.join([y for y,tag in nltk.pos_tag(nltk.word_tokenize(x)) if tag == \"NN\" or tag == \"JJ\"])\n",
+    "\n",
+    "play_with.apply(extract_noun_adj)"
    ]
   },
   {
@@ -1807,12 +1878,14 @@
    "source": [
     "# Number of Top words to Look At\n",
     "num_top_words = 50\n",
+    "bag_to_use = vectorized_1gram\n",
+    "feature_names_to_use = vectorizer.get_feature_names()\n",
     "\n",
     "# Count the number of time each word occurs in the entire dataset\n",
-    "word_freq = vectorized_2gram.sum(axis=0)\n",
+    "word_freq = bag_to_use.sum(axis=0)\n",
     "print word_freq.shape\n",
     "\n",
-    "words = zip(word_freq, bigram_vectorizer.get_feature_names())\n",
+    "words = zip(word_freq, feature_names_to_use)\n",
     "top_words = (sorted(words, key=lambda t: t[0], reverse=True))[:num_top_words]\n",
     "\n",
     "print top_words"
