added in Alex's part

--- a/Profits.ipynb
+++ b/Profits.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "\"\"\" pred_series = panda series \"\"\"\n",
-    "def simulate(filtered_df, pred_series):\n",
+    "def simulate_helper(filtered_df, pred_series):\n",
     "    \n",
     "    profits = []\n",
     "\n",
@@ -26,9 +26,8 @@
     "    print 'Average profits:', np.mean(profits)\n",
     "    print 'Total profits:', np.sum(profits)\n",
     "    print \n",
-    "    \n",
-    "bag_to_use = \n",
-    "model_to_use =\n",
+    "\n",
+    "def simulate(bag_to_use, model_to_use, filtered_df)\n",
     "filtered_df['random'] = ''\n",
     "filtered_df['model'] = ''\n",
     "\n",
@@ -51,6 +50,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
